# infrastructure-template

./: .coveragerc  .dockerignore  .env.dist  .env.empty  .gitignore  .gitleaks.toml  .yamllint.yml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/: AUTORELEASE.md  TEMPLATE_SYNC_APP.md  TEMPLATE_SYNC_PAT.md  dependabot.yml  github-actions-secrets.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/linters/: .yaml-lint.yml
.github/workflows/: autoprerelase.yml  autorelease.yml  bats-tests.yml  checkov.yml  codeql.yml  infracost.yml  inframap.yml  nightly-guardrails.yml  nightly-quality.yml  pulumi-deploy.yml  pulumi-integration.yml  pulumi-local.yml  pulumi-mutation.yml  pulumi-policy.yml  pulumi-pr-guardrails.yml  pulumi-preview.yml  pulumi-structural.yml  pulumi-unit.yml  python-quality.yml  security-scans.yml  snyk.yml  super-linter.yml  tempate-sync-pat.yml  template-sync-app.yml  template-sync-pat.yml  terrascan.yml  tf_format.yml  tf_validate.yml  tflint.yml  tfsec.yml
cli/: terraform  terraform-compliance  terraspace
docker/: docker-compose.yml
docs/: README.md  ci-architecture.md  ci-guardrails.md  ci-quality-gates.md  github-actions-secrets.md  pulumi-guardrails.md  pycharm-autocomplete.md  security-baseline.md  sre-operations.md  testing.md  uv-rust-python-tooling-plan.md
policy/: PulumiPolicy.yaml  __init__.py  __main__.py  config.py  guardrails.py  pack.py  requirements.txt  vilnacrm_guardrails.yaml
provisioning/: main.tf  tfplan.binary
pulumi/: .flake8  .gitignore  .pre-commit-config.yaml  Pulumi.dev.yaml  Pulumi.example.yaml  Pulumi.yaml  __main__.py  pyproject.toml  requirements.txt  sitecustomize.py
pulumi/app/: __init__.py  environment.py  guardrails.py  server.py
pulumi/pulumi_app/: __init__.py  environment.py
requirements/: dev.txt
scripts/: _script_support.py  doctor.py  doctor.sh  prepare_docker_context.py  prepare_docker_context.sh  prepare_policy_pack.py  prepare_policy_pack.sh  publish_pulumi_preview_summary.py  publish_pulumi_preview_summary.sh  pulumi_ci_guardrails.py  pulumi_python_with_coverage.sh  report_maintainability_trends.py  report_maintainability_trends.sh  run_mutation_tests.py  run_mutation_tests.sh  run_pulumi_drift_check.py  run_pulumi_drift_check.sh  run_pulumi_preview.py  run_pulumi_preview.sh
super-linter-output/: super-linter-summary.md
tests/: conftest.py
tests/integration/: test_guardrail_contracts.py  test_policy_pack_enforcement.py  test_stack_entrypoint.py  test_stack_lifecycle.py
tests/policies/: test_policy_pack.py
tests/pulumi/: test_ci_contracts.py  test_ci_guardrails.py  test_delivery_contracts.py  test_manifest.py  test_quality_contracts.py
tests/unit/: make_targets.bats  test_ci_guardrails.py  test_environment_component.py  test_example_server.py  test_guardrails.py  test_script_entrypoints.py  test_sitecustomize.py
