[project]
name = "infrastructure-template"
version = "0.1.0"
description = "Pulumi-based infrastructure template"
readme = "README.md"
requires-python = ">=3.10,<3.12"
authors = [
    { name = "Yaroslav Kravtsov", email = "kravtsov.yar@gmail.com" },
    { name = "Mykyta Mozghovoi", email = "n.mozgowoi2017@gmail.com" },
]
dependencies = [
    "pulumi>=3.200.0,<4",
    "pulumi-aws>=7.0,<8",
    "pyyaml>=6,<7",
]

[dependency-groups]
dev = [
    "coverage[toml]>=7.6,<8",
    "mutmut>=2.4,<3",
    "pip-audit>=2.9,<3",
    "pytest>=8.0,<9",
    "pytest-cov>=5.0,<6",
    "pulumi-policy>=1.20.0,<2",
    "ruff>=0.15.6,<1",
    "ty>=0.0.21,<0.1",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
