[project]
name = "infrastructure-template"
version = "0.1.0"
description = "Pulumi-based infrastructure template"
readme = "README.md"
requires-python = ">=3.10,<3.12"
authors = [
    { name = "Yaroslav Kravtsov", email = "kravtsov.yar@gmail.com" },
    { name = "Mykyta Mozghovoi", email = "n.mozgowoi2017@gmail.com" },
]
dependencies = [
    "pulumi>=3.200.0,<4",
    "pulumi-aws>=7.0,<8",
    "pulumi-policy>=1.20.0,<2",
    "pyyaml>=6,<7",
]

[dependency-groups]
dev = [
    "bandit[toml]>=1.8,<2",
    "cyclonedx-bom>=4.1,<5",
    "coverage[toml]>=7.6,<8",
    "deptry>=0.23,<0.24",
    "docstr-coverage>=2.3,<3",
    "import-linter>=2.4,<3",
    "mutmut>=2.4,<3",
    "pip-audit>=2.9,<3",
    "pytest>=8.0,<9",
    "pytest-cov>=5.0,<6",
    "radon>=5.1,<6",
    "ruff>=0.15.6,<1",
    "tomli>=2.0,<3",
    "ty>=0.0.21,<0.1",
    "vulture>=2.11,<3",
    "wily>=1.25,<2",
    "xenon>=0.9,<1",
    "yamllint>=1.35,<2",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["C90", "E", "F", "I"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.bandit]
exclude_dirs = ["tests"]
targets = ["pulumi", "policy", "scripts"]

[tool.deptry]
extend_exclude = [".artifacts", ".pulumi-backend"]
ignore_notebooks = true
known_first_party = ["app", "policy"]

[tool.deptry.package_module_name_map]
pyyaml = ["yaml"]
"pulumi-policy" = ["pulumi_policy"]

[tool.deptry.per_rule_ignores]
DEP001 = ["config", "guardrails", "pack"]
DEP002 = ["pulumi-aws"]
DEP004 = [
    "bandit",
    "coverage",
    "cyclonedx-bom",
    "deptry",
    "docstr-coverage",
    "import-linter",
    "mutmut",
    "pip-audit",
    "pytest",
    "pytest-cov",
    "radon",
    "ruff",
    "ty",
    "vulture",
    "wily",
    "xenon",
    "yamllint",
]

[tool.importlinter]
root_packages = ["app", "policy"]

[[tool.importlinter.contracts]]
name = "Pulumi runtime does not depend on the policy pack"
type = "forbidden"
source_modules = ["app"]
forbidden_modules = ["policy"]

[[tool.importlinter.contracts]]
name = "Policy pack stays isolated from Pulumi runtime modules"
type = "forbidden"
source_modules = ["policy"]
forbidden_modules = ["app"]

[[tool.importlinter.contracts]]
name = "Pulumi app layering remains one-way"
type = "layers"
containers = ["app"]
layers = ["environment", "guardrails"]

[[tool.importlinter.contracts]]
name = "Policy layering remains one-way"
type = "layers"
containers = ["policy"]
layers = ["pack", "guardrails", "config"]

[tool.vulture]
exclude = ["tests/", ".artifacts/", ".pulumi-backend/"]
min_confidence = 80
paths = ["pulumi/app", "policy", "scripts"]
