[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool]
[tool.poetry]
package-mode = false
version = "0.1.0"
[tool.poetry.dependencies]
pulumi = "^3.138"
pulumi-aws = "^6.58"
python = "^3.9"
black = "^24.10.0"
flake8 = "^7.1.1"
pre-commit = "^4.0.1"

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pylint.main]
disable = ["C0411"]

[tool.pylint.design]
max-attributes = 10
