[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "infrastructure-template"
package-mode = false
version = "0.1.0"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pulumi = ">=3.138,<4"
pulumi-aws = ">=6.58,<7"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^5.0"
mutmut = "^2.4"
pyyaml = "^6.0"
black = "^26.3.1"
flake8 = "^7.1.1"
pre-commit = "^4.0.1"
